generating rdf file using our resit ontology

--- a/sparqlquery.ipynb
+++ b/sparqlquery.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,71 +39,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://rit.mellon.org/Members/ihf/foaf.rdf#me\n",
-      "http://www.kjetil.kjernsmo.net/foaf#me\n",
-      "http://www.w3.org/People/Jacobs/contact.rdf#IanJacobs\n",
-      "http://my.opera.com/howcome/xml/foaf#howcome\n",
-      "http://people.csail.mit.edu/lkagal/foaf#me\n",
-      "http://users.ecs.soton.ac.uk/mc/mcfoaf.rdf#me\n",
-      "http://eikeon.com/foaf.rdf#eikeon\n",
-      "http://dbpedia.org/resource/John_Seely_Brown\n",
-      "http://dbpedia.org/resource/Tim_Bray\n",
-      "http://dig.csail.mit.edu/People/RRS\n",
-      "http://www.w3.org/People/EM/contact#me\n",
-      "http://dbpedia.org/resource/John_Gage\n",
-      "http://people.w3.org/simon/foaf#i\n",
-      "http://www.w3.org/People/Berners-Lee/card#amy\n",
-      "http://people.csail.mit.edu/crowell/foaf.rdf#crowell\n",
-      "http://dig.csail.mit.edu/2008/webdav/timbl/foaf.rdf#edd\n",
-      "http://danbri.org/foaf#danbri\n",
-      "http://norman.walsh.name/knows/who#norman-walsh\n",
-      "http://presbrey.mit.edu/foaf.rdf#presbrey\n",
-      "http://my.opera.com/chaals/xml/foaf#me\n",
-      "http://dig.csail.mit.edu/2008/webdav/timbl/foaf.rdf#libby\n",
-      "http://hometown.aol.com/chbussler/foaf/chbussler.foaf#me\n",
-      "http://bblfish.net/people/henry/card#me\n",
-      "http://web.mit.edu/ruthdhan/www/foaf.rdf#ruthdhan\n",
-      "Ndce2193559c4478e9e27a193c677efe7\n",
-      "http://web.mit.edu/shinnyih/foaf.rdf#\n",
-      "http://dig.csail.mit.edu/2007/wiki/people/JoeLambda#JL\n",
-      "http://heddley.com/edd/foaf.rdf#edd\n",
-      "http://dig.csail.mit.edu/2008/webdav/timbl/foaf.rdf#cm\n",
-      "http://dbpedia.org/resource/John_Klensin\n",
-      "http://teole.jfouffa.org/People/Teole/card.rdf#me\n",
-      "http://www.aaronsw.com/about.xrdf#aaronsw\n",
-      "http://www.cambridgesemantics.com/people/about/lee\n",
-      "http://www.mindswap.org/2004/owl/mindswappers#Bijan.Parsia\n",
-      "http://myopenlink.net/dataspace/person/kidehen#this\n",
-      "http://id.ecs.soton.ac.uk/person/1269\n",
-      "http://id.ecs.soton.ac.uk/person/2686\n",
-      "http://qdos.com/people/tom.xrdf#me\n",
-      "http://inamidst.com/sbp/foaf#Sean\n",
-      "http://www.dajobe.org/foaf.rdf#i\n",
-      "http://dig.csail.mit.edu/2008/webdav/timbl/foaf.rdf#ss\n",
-      "http://people.csail.mit.edu/psz/foaf.rdf#me\n",
-      "http://www.lassila.org/ora.rdf#me\n",
-      "http://research.microsoft.com/~henrikn/foaf.xml#me\n",
-      "http://www.cs.umd.edu/~hendler/2003/foaf.rdf#jhendler\n",
-      "http://dbpedia.org/resource/John_Markoff\n",
-      "http://www.w3.org/People/karl/karl-foaf.xrdf#me\n",
-      "http://id.ecs.soton.ac.uk/person/1650\n",
-      "http://dig.csail.mit.edu/People/yosi#YES\n",
-      "http://people.apache.org/~oshani/foaf.rdf#me\n",
-      "http://people.csail.mit.edu/ryanlee/about#ryanlee\n",
-      "http://id.ecs.soton.ac.uk/person/60\n",
-      "http://www.w3.org/People/Connolly/#me\n",
-      "http://www.ivan-herman.net/foaf.rdf#me\n",
-      "http://www.mindswap.org/2004/owl/mindswappers#Jennifer.Golbeck\n",
-      "http://www.isi.edu/~gil/foaf.rdf#me\n",
-      "http://dig.csail.mit.edu/2007/wiki/people/RobertHoffmann#RMH\n",
-      "http://www.w3.org/People/djweitzner/foaf#DJW\n"
+      "mailto:connolly@w3.org\n",
+      "mailto:dino@grorg.org\n",
+      "mailto:dean@w3.org\n",
+      "mailto:edd@xml.com\n",
+      "mailto:edd@usefulinc.com\n",
+      "mailto:amy@w3.org\n",
+      "mailto:karl@w3.org\n",
+      "mailto:me@aaronsw.com\n",
+      "mailto:em@w3.org\n",
+      "mailto:libby.miller@bristol.ac.uk\n",
+      "mailto:edd@xmlhack.com\n"
      ]
     }
    ],
@@ -114,7 +67,8 @@
     "# the QueryProcessor knows the FOAF prefix from the graph\n",
     "# which in turn knows it from reading the RDF/XML file\n",
     "for row in g.query(\n",
-    "    'select ?s where { [] foaf:knows ?s .}'):\n",
+    "    #'select ?s where { [] foaf:knows ?s .}'):\n",
+    "    'select ?s where { [] foaf:mbox ?s .}'):\n",
     "    print(row.s)\n",
     "    # or row[\"s\"]\n",
     "    # or row[rdflib.Variable(\"s\")]"
