using ontology to create individuals examples using resit and relatives shows using name space label

--- a/examples/parseowl-turtle-format.ipynb
+++ b/examples/parseowl-turtle-format.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,13 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "g = rdflib.Graph()\n",
     "try:\n",
-    "    g.parse('relatives.ttl', format='turtle')\n",
+    "    g.parse('resit-example.ttl', format='turtle')\n",
+    "    #g.parse('relatives-test.ttl', format='turtle')\n",
     "except FileNotFoundError:\n",
     "    # This test might be run from the parent directory root\n",
     "    print('file not found trying something else!')\n",
@@ -39,14 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n<rdf:RDF\\n   xmlns=\"http://example.org/relatives#\"\\n   xmlns:owl=\"http://www.w3.org/2002/07/owl#\"\\n   xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"\\n   xmlns:rdfs=\"http://www.w3.org/2000/01/rdf-schema#\"\\n>\\n  <rdf:Description rdf:about=\"http://example.org/relatives#John\">\\n    <hasChild rdf:resource=\"http://example.org/relatives#Mary\"/>\\n    <hasChild rdf:resource=\"http://example.org/relatives#Michael\"/>\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\\n    <rdf:type rdf:resource=\"http://example.org/relatives#Person\"/>\\n    <hasParent rdf:resource=\"http://example.org/relatives#James2\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://example.org/relatives#Bob\">\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\\n    <rdf:type rdf:resource=\"http://example.org/relatives#Person\"/>\\n    <hasParent rdf:resource=\"http://example.org/relatives#Bill\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://example.org/relatives#Cathy\">\\n    <hasParent rdf:resource=\"http://example.org/relatives#Bill\"/>\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\\n    <rdf:type rdf:resource=\"http://example.org/relatives#Person\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://example.org/relatives#Simon\">\\n    <hasParent rdf:resource=\"http://example.org/relatives#Michael\"/>\\n    <rdf:type rdf:resource=\"http://example.org/relatives#Person\"/>\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://example.org/relatives#Tim\">\\n    <rdf:type rdf:resource=\"http://example.org/relatives#Person\"/>\\n    <hasParent rdf:resource=\"http://example.org/relatives#Simon\"/>\\n    <hasParent rdf:resource=\"http://example.org/relatives#Valerie\"/>\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://example.org/relatives#hasParent\">\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#ObjectProperty\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://example.org/relatives#Parent\">\\n    <rdfs:subClassOf rdf:resource=\"http://example.org/relatives#Person\"/>\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Class\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://example.org/relatives#James2\">\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\\n    <hasChild rdf:resource=\"http://example.org/relatives#John\"/>\\n    <rdf:type rdf:resource=\"http://example.org/relatives#Person\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://example.org/relatives#Victor\">\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\\n    <rdf:type rdf:resource=\"http://example.org/relatives#Person\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://example.org/relatives#Fred\">\\n    <hasChild rdf:resource=\"http://example.org/relatives#James\"/>\\n    <hasParent rdf:resource=\"http://example.org/relatives#Cathy\"/>\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\\n    <rdf:type rdf:resource=\"http://example.org/relatives#Person\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://example.org/relatives\">\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Ontology\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://example.org/relatives#Mary\">\\n    <rdf:type rdf:resource=\"http://example.org/relatives#Person\"/>\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:nodeID=\"fb55de996ea394abeb7dd475a38228d0bb2\">\\n    <rdf:rest rdf:resource=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#nil\"/>\\n    <rdf:first rdf:resource=\"http://example.org/relatives#hasParent\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://example.org/relatives#Ann\">\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\\n    <rdf:type rdf:resource=\"http://example.org/relatives#Person\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://example.org/relatives#Jacob\">\\n    <hasParent rdf:resource=\"http://example.org/relatives#Fred\"/>\\n    <rdf:type rdf:resource=\"http://example.org/relatives#Person\"/>\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://example.org/relatives#hasGrandparent\">\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#ObjectProperty\"/>\\n    <owl:propertyChainAxiom rdf:nodeID=\"fb55de996ea394abeb7dd475a38228d0bb1\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://example.org/relatives#James\">\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\\n    <rdf:type rdf:resource=\"http://example.org/relatives#Person\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://example.org/relatives#Michael\">\\n    <hasParent rdf:resource=\"http://example.org/relatives#John\"/>\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\\n    <rdf:type rdf:resource=\"http://example.org/relatives#Person\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://example.org/relatives#Valerie\">\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\\n    <rdf:type rdf:resource=\"http://example.org/relatives#Person\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://example.org/relatives#hasChild\">\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#ObjectProperty\"/>\\n    <owl:inverseOf rdf:resource=\"http://example.org/relatives#hasParent\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://example.org/relatives#Aaron\">\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://example.org/relatives#Person\">\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Class\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:nodeID=\"fb55de996ea394abeb7dd475a38228d0bb1\">\\n    <rdf:first rdf:resource=\"http://example.org/relatives#hasParent\"/>\\n    <rdf:rest rdf:nodeID=\"fb55de996ea394abeb7dd475a38228d0bb2\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://example.org/relatives#Child\">\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Class\"/>\\n    <rdfs:subClassOf rdf:resource=\"http://example.org/relatives#Person\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://example.org/relatives#Bill\">\\n    <rdf:type rdf:resource=\"http://example.org/relatives#Person\"/>\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\\n  </rdf:Description>\\n</rdf:RDF>\\n'\n"
+      "b'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n<rdf:RDF\\n   xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"\\n>\\n  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#sharc\">\\n    <rdf:type rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#hpcs\"/>\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#iceberg\">\\n    <rdf:type rdf:resource=\"http://rcg.group.shef.ac.uk/resitowl/resit#hpcs\"/>\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#NamedIndividual\"/>\\n  </rdf:Description>\\n  <rdf:Description rdf:about=\"http://rcg.group.shef.ac.uk/resitowl/resit#\">\\n    <rdf:type rdf:resource=\"http://www.w3.org/2002/07/owl#Ontology\"/>\\n  </rdf:Description>\\n</rdf:RDF>\\n'\n"
      ]
     }
    ],
@@ -58,11 +59,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = open('testfile.rdf','wb') \n",
+    "#file = open('testfile.rdf','wb') \n",
+    "file = open('resit-example.rdf','wb') \n",
     "ss=str(s)\n",
     "file.write(s) \n",
     "\n",
